# chocolate

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md
cmake/: CompilerWarnings.cmake
engine/: action_binds.h  atlas.h  canvas.h  color.inl  config.h  config.inl  engine.h  file.h  ini.h  input.h  log.h  math.inl  shader.h  sprites.h  texture.h  tilesheet.h
foundation/: allocator.cpp  allocator.h  api_types.h  engine.h  log.cpp  log.h
generated_src/proto/: engine.pb.cc  engine.pb.h
glad/include/glad/: glad.h
glad/src/: glad.c
proto/: engine.proto
src/: action_binds.cpp  atlas.cpp  canvas.cpp  config.cpp  engine.cpp  file.cpp  input.cpp  log.cpp  shader.cpp  sprites.cpp  texture.cpp  tilesheet.cpp
tests/: CMakeLists.txt  test_math.cpp
